--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,7 +3,7 @@
 #app {
   max-width: 1920px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0px 2rem 0px 2rem;
 
   font-weight: normal;
 }
@@ -20,16 +20,3 @@ a,
     background-color: hsla(160, 100%, 37%, 0.2);
   }
 }
-
-/* @media (min-width: 1024px) {
-  body {
-    display: flex;
- 
-  }
-/*
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 2rem;
-  }
-} */
